Create components and router

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "homepage": "https://k012497.github.io/archive/",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "dev": "rollup -c -w --single",
+    "start": "sirv public --single",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d public/build"
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5"
   }
 }
